deploy/frontend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-app-deployment
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app-container
          image: frontend/student_and_t:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
              name: http
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
