deploy/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-app-service
  labels:
    app: frontend-app
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
    - name: http
      port: 80
      targetPort: 5173
      protocol: TCP
